
[12/08/2021] - 5.0.27 - Simone Pelaia
Fix classe LinqFilter ritorna condizione vera se non eseguita alcuna combinazione And/Or

[30/08/2021] - 5.0.28 - Simone Pelaia
Piccole fix alla deserializzazione JSON

[31/08/2021] - 5.0.29 - Simone Pelaia
Fix alla deserializzazione JSON
Inizio rimozione metodi non più utili

[02/09/2021] - 5.0.30 - Simone Pelaia
Rimozione metodi non più utili
Rimozione LoadFullobjects (ora di default)
Rimozione To e From DTO (Dictionary)
Rimozione Mapping DataList
Rimossa gestione oggetti non mappati (ovvero impostabili)
Rimossa BusinessObjectList in quanto poco utiles
Rimossa serializzazione/deserializzazione binaria
Rimossi filtri specializzati

[13/09/2021] - 5.0.31 - Simone Pelaia
Fix bug che esegue query su campo oggetto quando questo e' null (come se fosse LoadOnAccess)

[14/09/2021] - 5.0.32 - Simone Pelaia
Aggiunti metodi DB per la mappatura delle query su oggetti DTO

[20/09/2021] - 5.0.33 - Simone Pelaia
Fix bug query mappata che non ritorna ultimo campo db

[20/09/2021] - 5.0.36 - Simone Pelaia
Fix bug query mappata su campi nullable e fix query paginata

[06/10/2021] - 5.0.37 - Simone Pelaia
Query mappata imposta anche proprietà ereditate

[06/10/2021] - 5.0.38 - Simone Pelaia
Modificato logdebug senza format

[03/12/2021] - 5.0.39 - Simone Pelaia
Fix bug Accesso a campo di LogicalDelete dopo chiamata DeleteObject

[24/12/2021] - 5.0.40 - Simone Pelaia
Aggiunti metodi Exec e ExecTrans a livello di slot per eseguire blocchi di codice "Gestito" senza preoccuparsi di try/catch o altro
ToBizObjectList - Aggiunta possibilità di eseguire un'azione su ciscun oggetto creato

[28/01/2022] - 5.0.41 - Simone Pelaia
GetLazy fortemente tipizzato
Introdotto GetLazyEx per gestire eventuali chiamate su oggetto non ancora salvato
Introdotto ResetLazy per eliminare un dato cached e forzare il ricaricamento all'accesso successivo

[28/01/2022] - 5.0.42 - Simone Pelaia
DeleteAll su IEnumerable
Rinominati metodi Lazy
Aggiunto LazySet per setters